[package]
name = "ruskcov"
version = "0.1.0"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.3"
gimli = "0.19.0"
nix = "0.15.0"
object = "0.15.0"
inject-types = { path = "../inject-types" }
bincode = "1.2"
tempfile = "3.1"
anyhow = "1.0"
memmap = "0.7"
smallvec = "1.0.0"
intervaltree ="0.2"
lazycell = "1.2.1"
fallible-iterator = "0.2.0"
crc = "1.0"
regex = "1.0"
internment = "0.3"